# sdl2_cavestory_cpp

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md  launch.json  launch.json~
0000/: CMakeLists.txt
0000/Core/: CMakeLists.txt
0000/main_cmake/: CMakeLists.txt  main.cpp  main.cpp~
0000/main_cmake/src/: AnimatedSprite.cpp  AnimatedSprite.h  AnimatedTile.cpp  AnimatedTile.cpp~  AnimatedTile.h  AnimatedTile.h~  Constants.h  Controllers.cpp  Controllers.h  Game.cpp  Game.h  Game.h~  Graphics.cpp  Graphics.h  Input.cpp  Input.h  Level.cpp  Level.cpp~  Level.h  Player.cpp  Player.cpp~  Player.h  Rectangle.h  Rectangle.h~  Slope.h  Sprite.cpp  Sprite.h  Tile.cpp  Tile.h  Time.cpp  Time.cpp~  Time.h~  Utils.h
0000/test/: CMakeLists.txt  test.cpp
My_Cmake/: Boost.cmake  Clang_setup.cmake  Conan.cmake  Doxygen.cmake  Graphics.cmake  Linux_Ver.cmake  MY_LUA.cmake  Sanitizers.cmake  Standard_Project_Settings.cmake  Static_Analyzers.cmake  Threads.cmake
SH_files/: CMake_Compile  CMake_clean_gen  CMake_compile_run  CMake_compile_run~  CMake_gen  New_Class_File_Name  New_Class_s_h  sh_Cmake_Compile  sh_Cmake_compile_run  vs_c_Cmake_run
assets/config/: window_config.json
assets/scripts/: Level1.lua  Level_1.lua
assets/tilemaps/: CaveStory_Tiled.tmx  NpcSym.json  PrtBarr.json  PrtCave.json  PrtLabo.json  RPG_map.txt  Testing_00.json  jungle.map
google_test/: CMakeLists.txt  test_file.cpp
